<?xml version="1.0" encoding="utf-8"?>
<layout >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/service_cost"
        android:layout_width="0dp"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/cost_of_service" />

    <TextView
        android:id="@+id/service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_cost"/>

    <RadioGroup
        android:id="@+id/tip_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/opt_amazing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question">

        <RadioButton
            android:id="@+id/opt_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_Op20Cp"/>

        <RadioButton
            android:id="@+id/opt_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_Op15Cp"/>

        <RadioButton
            android:id="@+id/opt_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_Op10Cp"/>

    </RadioGroup>

    <Switch
        android:id="@+id/tip_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Round up tip?"
        android:checked="true"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf = "@+id/tip_option"
    />

    <Button
        android:id="@+id/cal_switch"
        android:text="@string/const_calculate_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_switch"
    />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>